# 1costingfe

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: backcasting_bridge.py  comparison.py  dec_blog_numbers.py  dec_blog_numbers_pulsedfrc.py  dhe3_mix_optimization.py  dhe3_pulsed_frc.py  dt_mirror.py  dt_mirror_0d.py  dt_mirror_backsolve.py  dt_mirror_output.md  dt_stellarator.py  dt_tokamak.py  dt_tokamak_0d.py  dt_tokamak_copper.py  external_physics_handoff.py  free_fusion_core.py  lower_bound_blog_figure.py  lower_bound_blog_numbers.py  mirror_power_sizing.py  multi_module.py  path_to_1cent.py  pb_mirror.py  scaled_overrides.py  tokamak_1gwe_default.py  tokamak_power_sizing.py  uncertainty_analysis.py
tests/: conftest.py  test_adapter.py  test_anchor_reproduction.py  test_aneutronic_blanket_normalization.py  test_backcast.py  test_backend.py  test_backend_parity.py  test_blanket_config.py  test_blanket_fill_double_count.py  test_cas22.py  test_cas22_first_wall.py  test_cas22_n_coils.py  test_chamber_sizing.py  test_costs.py  test_defaults.py  test_economics.py  test_eta_pin_coupling.py  test_eta_source_override.py  test_external_physics_handoff.py  test_f_rad_fus_override.py  test_geometry.py  test_ife_mif_power_balance.py  test_mirror.py  test_model.py  test_multifuel_0d.py  test_n_mod_sizing.py  test_paper_benchmark_scripts.py  test_physics.py  test_physics_yield.py  test_power_balance.py  test_power_cycle.py  test_pulsed_dec_costing.py  test_pulsed_power_balance.py  test_radiation.py  test_reactivity.py  test_rep_rate_shot_design.py  test_target_cost.py  (+8 more)
(+161 files in other folders)
