[project]
name = "1costingfe"
version = "0.1.0"
description = "JAX-native fusion power plant costing framework"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "pre-commit>=3.0",
    "ruff==0.12.0",
    "matplotlib>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/costingfe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: heavy solver/integration tests; dev loop runs -m 'not slow', full suite runs them",
]
filterwarnings = [
    "ignore:.*aneutronic fuels do not need a breeding blanket.*:UserWarning",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
